# ui-requirement-verification

./: .gitignore  README.md  pyproject.toml
configs/: paths.yaml
data/annotations/flow_manifests/: mind2web_repo_dataset_annotation_ids.txt  mind2web_sample_annotation_ids.txt
data/annotations/label_schema/: verification_labels_v1.md
examples/requirements/: 01_budget_requirements.json  02_delta_requirements.json  03_ticketcenter_requirements.json
examples/sample_outputs/01_budget/: prompt.txt  selection.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
scripts/: backfill_mind2web_originals.py  backup_and_clear_candidates.sh  create_candidate_requirement_dirs.sh  describe_screens.py  export_mind2web.py  extract_pure_requirement_candidates.py  extract_pure_requirements.py  generate_candidate_requirements.py  generate_contrastive_candidates_from_gold.py  generate_ui_requirements.py  import_contrastive_candidates.py  make_contrastive_prompt.py  prepare_pure_annotation_sheet.py  prepare_pure_candidate_annotation_sheet.py  profile_mind2web.py  update_repo_dataset.sh
src/ui_verifier/annotation/: service.py  (+1 more)
tests/: test_annotation_storage.py  test_candidate_generation_pipeline.py  test_contrastive_generation.py  test_contrastive_import.py  test_export_mind2web.py  test_prepare_pure_annotation_sheet.py  test_prepare_pure_candidate_annotation_sheet.py  test_pure_document_pipeline.py  test_pure_loader.py  test_requirement_inspection.py  test_requirement_prompting.py  test_requirements_schema_roundtrip.py
(+55 files in other folders)
