[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-verifier"
version = "0.1.0"
description = "Prototype pipeline for UI requirement verification from screenshot flows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pillow>=10.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0.0",
]
data = [
    "datasets>=3.0.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
